new background & fixes

--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
         <div class="row mt-3">
 
             <div class="col-12 col-lg-2">
-                <img id="xeImg" class="img-fluid mb-3" src="images/location.png" alt="location">
+                <img id="img" class="img-fluid mb-3" src="images/location.png" alt="location">
             </div>
 
             <div class="col-12 col-lg-10">
-                <h5>What place are you loking for?</h5>
+                <h1>What place are you loking for?</h1>
                 <!-- INPUT -->
-                <input type="text" id="input" class="col-12" placeholder="&#128269; e.g. Athens">
+                <input type="text" id="input" class="col-12" placeholder="&#128269;">
 
                 <!-- OUTPUT -->
                 <div>
