--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
             </div>
 
             <div class="col-12 col-lg-8">
-                <h1>What place are you loking for?</h1>
+                <h1 id="whatPlace">What place are you loking for?</h1>
 
                 <!-- INPUT -->
-                <input id="input" class="form-control my-3" type="text" placeholder="&#128269; Search"
+                <input id="input" class="form-control my-3" type="text" placeholder="&#128269; e.g. Paris"
                     aria-label="Search">
 
                 <!-- OUTPUT -->
