input language refactor & improvements

--- a/index.html
+++ b/index.html
@@ -6,14 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Location Info</title>
+    <meta name="keywords" content="best places to visit, city landmarks, locations">
+    <meta name="description" content="The ultimate source of information for city landmarks">
     <link rel="icon" type="image/png" href="images/location.png" sizes="16x16" />
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"
         integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/mystyle.css">
 </head>
 
@@ -23,11 +22,9 @@
         <a href="#">
             <img id="AdBanner" class="my-3" src="images/Advertise-here.png" alt="advertisement">
         </a>
-
     </div>
 
     <div class="container">
-
         <div class="row mt-3">
 
             <div class="col-12 col-lg-2">
@@ -39,18 +36,18 @@
             <div class="col-12 col-lg-8">
                 <h1 id="whatPlace">What place are you loking for?</h1>
 
-                <!-- INPUT -->
+                <!-- Input -->
                 <input id="input" class="form-control my-3" type="text" placeholder="&#128269; e.g. Paris"
                     aria-label="Search">
 
-                <!-- OUTPUT -->
+                <!-- Output -->
                 <div>
                     <table class="table">
                         <tbody id="dataTable"></tbody>
                     </table>
                 </div>
-                
-                <!-- SEARCH BUTTON -->
+
+                <!-- Search Button -->
                 <button id="searchButton" class="btn btn-success rounded-1 my-1" disabled>
                     <b>Click to search</b>
                 </button>
